--- a/windows_containers/enabling-windows-container-workloads.adoc
+++ b/windows_containers/enabling-windows-container-workloads.adoc
@@ -33,7 +33,7 @@ Windows instances deployed by the WMCO are configured with the containerd contai
 
 [role="_additional-resources"]
 .Additional resources
-* For the comprehensive prerequisites for the Windows Machine Config Operator, see xref:../windows_containers/windows-containers-release-notes-7-x#wmco-prerequisites_windows-containers-release-notes[Windows Machine Config Operator prerequisites].
+* For the comprehensive prerequisites for the Windows Machine Config Operator, see xref:../windows_containers/wmco_rn/windows-containers-release-notes-7-x-prereqs.adoc#windows-containers-release-notes-7-x-prereqs[Windows Machine Config Operator prerequisites].
 
 [id="installing-the-wmco"]
 == Installing the Windows Machine Config Operator
@@ -55,6 +55,7 @@ include::modules/configuring-secret-for-wmco.adoc[leveloffset=+1]
 
 include::modules/wmco-cluster-wide-proxy.adoc[leveloffset=+1]
 
+[role="_additional-resources"]
 .Additional resources
 
 * xref:../networking/enable-cluster-wide-proxy.adoc#enable-cluster-wide-proxy[Configuring the cluster-wide proxy].
