--- a/windows_containers/wmco_rn/windows-containers-release-notes-7-x-known-limitations.adoc
+++ b/windows_containers/wmco_rn/windows-containers-release-notes-7-x-known-limitations.adoc
@@ -1,9 +1,12 @@
-// Module included in the following assemblies:
-//
-// * windows_containers/windows-containers-release-notes-#-x
+:_mod-docs-content-type: ASSEMBLY
+:context: windows-containers-release-notes-7-x-known-limitations
+[id="windows-containers-release-notes-7-x-known-limitations"]
+= Windows Machine Config Operator known limitations
+include::_attributes/common-attributes.adoc[]
 
-[id="windows-containers-release-notes-limitations_{context}"]
-= Known limitations
+toc::[]
+
+Note the following limitations when working with Windows nodes managed by the WMCO (Windows nodes).
 
 * The following {product-title} features are not supported on Windows nodes:
 // ** Red Hat OpenShift Developer CLI (odo)
