--- a/windows_containers/wmco_rn/windows-containers-release-notes-7-x-past.adoc
+++ b/windows_containers/wmco_rn/windows-containers-release-notes-7-x-past.adoc
@@ -1,39 +1,21 @@
 :_mod-docs-content-type: ASSEMBLY
-[id="windows-containers-release-notes-7-x"]
-= {productwinc} release notes
+:context: windows-containers-release-notes-7-x-past
+[id="windows-containers-release-notes-7-x-past"]
+= Release notes for past releases of the Windows Machine Config Operator
 include::_attributes/common-attributes.adoc[]
-:context: windows-containers-release-notes
 
 toc::[]
 
-[id="about-windows-containers"]
-== About {productwinc}
+The following release notes are for previous versions of the Windows Machine Config Operator (WMCO).
 
-{productwinc} enables running Windows compute nodes in an {product-title} cluster. Running Windows workloads is possible by using the Red Hat Windows Machine Config Operator (WMCO) to install and manage Windows nodes. With Windows nodes available, you can run Windows container workloads in {product-title}.
+For the current version, see xref:../../windows_containers/wmco_rn/windows-containers-release-notes-7-x.adoc#windows-containers-release-notes-7-x[Red Hat OpenShift support for Windows Containers release notes].
 
-These release notes track the development of the WMCO, which provides all Windows container workload capabilities in {product-title}.
-
-ifndef::openshift-origin[]
-[id="getting-support"]
-== Getting support
-
-// wording taken and modified from https://access.redhat.com/support/policy/updates/openshift#windows
-
-{productwinc} is provided and available as an optional, installable component. {productwinc} is not part of the {product-title} subscription. It requires an additional Red Hat subscription and is supported according to the link:https://access.redhat.com/support/offerings/production/soc/[Scope of coverage] and link:https://access.redhat.com/support/offerings/production/sla[Service level agreements].
-
-You must have this separate subscription to receive support for {productwinc}. Without this additional Red Hat subscription, deploying Windows container workloads in production clusters is not supported. You can request support through the link:http://access.redhat.com/[Red Hat Customer Portal].
-
-For more information, see the Red Hat OpenShift Container Platform Life Cycle Policy document for link:https://access.redhat.com/support/policy/updates/openshift#windows[{productwinc}].
-
-If you do not have this additional Red Hat subscription, you can use the Community Windows Machine Config Operator, a distribution that lacks official support.
-endif::openshift-origin[]
-
-[id="wmco-7-2-1"]
+[id="wmco-7-2-1_{context}"]
 == Release notes for Red{nbsp}Hat Windows Machine Config Operator 7.2.1
 
 This release of the WMCO provides new features and bug fixes for running Windows compute nodes in an {product-title} cluster. The components of the WMCO 7.2.1 were released in link:https://access.redhat.com/errata/RHBA-2024:1476[RHBA-2024:1476].
 
-[id="wmco-7-2-1-bug-fixes"]
+[id="wmco-7-2-1-bug-fixes_{context}"]
 === Bug fixes
 
 // Also in 10.15.0
@@ -55,7 +37,7 @@ This release of the WMCO provides new features and bug fixes for running Windows
 // Also in 10.15.0
 * Previously, because of a lack of synchronization between Windows compute machine set nodes and Bring-Your-Own-Host (BYOH) instances, during an update the compute machine set nodes and the BYOH instances could update simultaneously, which could have impacted running workloads. This fix introduces a locking mechanism so that compute machine set nodes and BYOH instances update individually. (link:https://issues.redhat.com/browse/OCPBUGS-23020[*OCPBUGS-23020*])
 
-[id="wmco-7-1-0"]
+[id="wmco-7-1-0_{context}"]
 == Release notes for Red Hat Windows Machine Config Operator 7.1.0
 
 This release of the WMCO provides new features and bug fixes for running Windows compute nodes in an {product-title} cluster. The components of the WMCO 7.1.0 were released in link:https://access.redhat.com/errata/RHSA-2023:4025[RHSA-2023:4025].
@@ -65,7 +47,7 @@ This release of the WMCO provides new features and bug fixes for running Windows
 Due to a known issue, your {product-title} cluster must be on version 4.12.3 or greater before updating the WMCO from version 7.0.1 to version 7.1.0. The update fails if the cluster is lower than version 4.12.3.
 ====
 
-[id="wmco-7-1-0-bug-fixes"]
+[id="wmco-7-1-0-bug-fixes_{context}"]
 === Bug fixes
 
 * Previously, the `containerd` container runtime reported an incorrect version on each Windows node because repository tags were not propagated to the build system. This configuration caused `containerd` to report its `go build` version as the version of each Windows node. With this update, the correct version is injected into the binary during build time, so that `containerd` reports the correct version for each Windows node. (link:https://issues.redhat.com/browse/OCPBUGS-7843[**OCPBUGS-7843**])
@@ -74,41 +56,41 @@ Due to a known issue, your {product-title} cluster must be on version 4.12.3 or 
 
 * Previously, on an Azure Windows Server 2019 platform that does not have Azure container services installed, WMCO would fail to deploy Windows instances and would display the `Install-WindowsFeature : Win32 internal error "Access is denied" 0x5 occurred while reading the console output buffer` error message. The failure occurred because the Microsoft `Install-WindowsFeature` cmdlet displays a progress bar, which cannot be sent over an SSH connection. This fix hides the progress bar. As a result, Windows instances can be deployed as nodes. (link:https://issues.redhat.com/browse/OCPBUGS-14445[*OCPBUGS-14445*])
 
-[id="wmco-7-0-1"]
+[id="wmco-7-0-1_{context}"]
 == Release notes for Red Hat Windows Machine Config Operator 7.0.1
 
 This release of the WMCO provides new features and bug fixes for running Windows compute nodes in an {product-title} cluster. The components of the WMCO 7.0.1 were released in link:https://access.redhat.com/errata/RHBA-2023:0748[RHBA-2023:0748].
 
-[id="wmco-7-0-1-bug-fixes"]
+[id="wmco-7-0-1-bug-fixes_{context}"]
 === Bug fixes
 
 * Previously, WMCO 7.0.0 did not support running in a namespace other than `openshift-windows-machine-operator`. With this fix, you can run WMCO in a custom namespace and can upgrade clusters that have WMCO installed in a custom namespace. (link:https://issues.redhat.com/browse/OCPBUGS-5065[**OCPBUGS-5065**])
 
-[id="wmco-7-0-0"]
+[id="wmco-7-0-0_{context}"]
 == Release notes for Red Hat Windows Machine Config Operator 7.0.0
 
 This release of the WMCO provides new features and bug fixes for running Windows compute nodes in an {product-title} cluster. The components of the WMCO 7.0.0 were released in link:https://access.redhat.com/errata/RHSA-2022:9096[RHSA-2022:9096].
 
-[id="wmco-7-0-0-new-features"]
+[id="wmco-7-0-0-new-features_{context}"]
 === New features and improvements
 
-[id="wmco-7-0-0-wicd"]
+[id="wmco-7-0-0-wicd_{context}"]
 ==== Windows Instance Config Daemon (WICD)
 
 The Windows Instance Config Daemon (WICD) is now performing many of the tasks that were previously performed by the Windows Machine Config Bootstrapper (WMCB). The WICD is installed on your Windows nodes. Users do not need to interact with the WICD and should not experience any difference in WMCO operation.
 
-[id="wmco-7-0-0-gcp"]
+[id="wmco-7-0-0-gcp_{context}"]
 ==== Support for clusters running on Google Cloud Platform
-You can now run Windows Server 2022 nodes on a cluster installed on Google Cloud Platform (GCP). You can create a Windows `MachineSet` object on GCP to host Windows Server 2022 compute nodes. For more information, see xref:../windows_containers/creating_windows_machinesets/creating-windows-machineset-gcp.adoc#creating-windows-machineset-gcp[Creating a Windows MachineSet object on vSphere].
+You can now run Windows Server 2022 nodes on a cluster installed on Google Cloud Platform (GCP). You can create a Windows `MachineSet` object on GCP to host Windows Server 2022 compute nodes. For more information, see xref:../../windows_containers/creating_windows_machinesets/creating-windows-machineset-gcp.adoc#creating-windows-machineset-gcp[Creating a Windows MachineSet object on vSphere].
 
-[id="wmco-7-0-0-bug-fixes"]
+[id="wmco-7-0-0-bug-fixes_{context}"]
 === Bug fixes
 
 * Previously, restarting the WMCO in a cluster with running Windows Nodes caused the windows exporter endpoint to be removed. Because of this, each Windows node could not report any metrics data. After this fix, the endpoint is retained when the WMCO is restarted. As a result, metrics data is reported properly after restarting WMCO. (link:https://bugzilla.redhat.com/show_bug.cgi?id=2107261[**BZ#2107261**])
 
 * Previously, the test to determine if the Windows Defender antivirus service is running was incorrectly checking for any process whose name started with Windows Defender, regardless of state. This resulted in an error when creating firewall exclusions for containerd on instances without Windows Defender installed. This fix now checks for the presence of the specific running process associated with the Windows Defender antivirus service. As a result, the WMCO can properly configure Windows instances as nodes regardless of whether Windows Defender is installed or not. (https://issues.redhat.com/browse/OCPBUGS-3573[**OCPBUGS-3573**])
 
-[id="wmco-7-0-0-known-issues"]
+[id="wmco-7-0-0-known-issues_{context}"]
 === Known issues
 
 The following known limitations have been announced after the previous WMCO release:
@@ -117,13 +99,9 @@ The following known limitations have been announced after the previous WMCO rele
 
 * {productwinc} does not support adding Windows nodes to a cluster through a trunk port. The only supported networking configuration for adding Windows nodes is through an access port that carries traffic for the VLAN.
 
-* WMCO 7.0.0 does not support running in a namespace other than `openshift-windows-machine-operator`. If you are using a custom namespace, it is recommended that you not upgrade to WMCO 7.0.0. Instead, you should upgrade to WMCO 7.0.1 when it is released. If your WMCO is configured with the *Automatic* update approval strategy, you should change it to *Manual* for WMCO 7.0.0. See the xref:../windows_containers/enabling-windows-container-workloads.adoc#installing-wmco-using-web-console_enabling-windows-container-workloads[installation instructions] for information on changing the approval strategy.
+* WMCO 7.0.0 does not support running in a namespace other than `openshift-windows-machine-operator`. If you are using a custom namespace, it is recommended that you not upgrade to WMCO 7.0.0. Instead, you should upgrade to WMCO 7.0.1 when it is released. If your WMCO is configured with the *Automatic* update approval strategy, you should change it to *Manual* for WMCO 7.0.0. See the xref:../../windows_containers/enabling-windows-container-workloads.adoc#installing-wmco-using-web-console_enabling-windows-container-workloads[installation instructions] for information on changing the approval strategy.
 
+[role="_additional-resources"]
 .Additional resources
 
-See the full list of xref:../windows_containers/windows-containers-release-notes-7-x.html#windows-containers-release-notes-limitations_windows-containers-release-notes[known limitations]
-
-include::modules/wmco-prerequisites.adoc[leveloffset=+1]
-
-include::modules/windows-containers-release-notes-limitations.adoc[leveloffset=+1]
-
+See the full list of xref:../../windows_containers/wmco_rn/windows-containers-release-notes-7-x-known-limitations.adoc#windows-containers-release-notes-7-x-known-limitations[known limitations]
