--- a/windows_containers/wmco_rn/windows-containers-release-notes-7-x-prereqs.adoc
+++ b/windows_containers/wmco_rn/windows-containers-release-notes-7-x-prereqs.adoc
@@ -1,6 +1,12 @@
-// Module included in the following assemblies:
-//
-// * windows_containers/understanding-windows-container-workloads.adoc
+:_mod-docs-content-type: ASSEMBLY
+:context: windows-containers-release-notes-7-x-prereqs
+[id="windows-containers-release-notes-7-x-prereqs"]
+= Windows Machine Config Operator prerequisites
+include::_attributes/common-attributes.adoc[]
+
+toc::[]
+
+The following information details the supported platform versions, Windows Server versions, and networking configurations for the Windows Machine Config Operator. See the vSphere documentation for any information that is relevant to only that platform.
 
 [id="wmco-prerequisites-supported-7.2.x_{context}"]
 == WMCO 7.2.x supported platforms and Windows Server versions
@@ -57,51 +63,4 @@ a|* Windows Server 2022, OS Build link:https://support.microsoft.com/en-us/topic
 |Bare metal or provider agnostic
 a|* Windows Server 2022, OS Build link:https://support.microsoft.com/en-us/topic/april-25-2022-kb5012637-os-build-20348-681-preview-2233d69c-d4a5-4be9-8c24-04a450861a8d[20348.681] or later
 * Windows Server 2019, version 1809
-|===
-
-== Supported networking
-
-Hybrid networking with OVN-Kubernetes is the only supported networking configuration. See the additional resources below for more information on this functionality. The following tables outline the type of networking configuration and Windows Server versions to use based on your platform. You must specify the network configuration when you install the cluster. 
-
-[NOTE]
-====
-* The WMCO does not support OVN-Kubernetes without hybrid networking or OpenShift SDN.
-* Dual NIC is not supported on WMCO-managed Windows instances.
-====
-
-.Platform networking support
-[cols="2",options="header"]
-|===
-|Platform
-|Supported networking
-
-|Amazon Web Services (AWS)
-|Hybrid networking with OVN-Kubernetes
-
-|Microsoft Azure
-|Hybrid networking with OVN-Kubernetes
-
-|VMware vSphere
-|Hybrid networking with OVN-Kubernetes with a custom VXLAN port
-
-|Google Cloud Platform (GCP)
-|Hybrid networking with OVN-Kubernetes
-
-|Bare metal or provider agnostic
-|Hybrid networking with OVN-Kubernetes
-|===
-
-.Hybrid OVN-Kubernetes Windows Server support
-[cols="2",options="header"]
-|===
-|Hybrid networking with OVN-Kubernetes
-|Supported Windows Server version
-
-|Default VXLAN port
-a|* Windows Server 2022, OS Build link:https://support.microsoft.com/en-us/topic/april-25-2022-kb5012637-os-build-20348-681-preview-2233d69c-d4a5-4be9-8c24-04a450861a8d[20348.681] or later
-* Windows Server 2019, version 1809
-
-|Custom VXLAN port
-|Windows Server 2022, OS Build link:https://support.microsoft.com/en-us/topic/april-25-2022-kb5012637-os-build-20348-681-preview-2233d69c-d4a5-4be9-8c24-04a450861a8d[20348.681] or later
-
 |===
