deprecate tech preview for CSI driver  OpenShift 4.17
update note

remove teh preview mention

update note

update note

update note

readd tech preview

readd tech preview

--- a/modules/builds-running-entitled-builds-with-sharedsecret-objects.adoc
+++ b/modules/builds-running-entitled-builds-with-sharedsecret-objects.adoc
@@ -6,12 +6,15 @@ You can use a `SharedSecret` object to securely access the entitlement keys of a
 
 The `SharedSecret` object allows you to share and synchronize secrets across namespaces.
 
-:FeatureName: Shared Resource CSI Driver
-include::snippets/technology-preview.adoc[]
+[IMPORTANT]
+====
+The Shared Resource CSI Driver feature is now generally available in link:https://docs.redhat.com/en/documentation/builds_for_red_hat_openshift/1.1[builds for Red Hat OpenShift 1.1]. This feature is now deprecated in the OpenShift Container Platform. To use this feature, ensure you are using builds for Red Hat OpenShift 1.1 or a more recent version.
+====
 
 .Prerequisites
 
 * You have enabled the `TechPreviewNoUpgrade` feature set by using the feature gates. For more information, see xref:../../nodes/clusters/nodes-cluster-enabling-features.adoc#nodes-cluster-enabling[Enabling features using feature gates].
+
 * You must have permission to perform the following actions:
 ** Create build configs and start builds.
 ** Discover which `SharedSecret` CR instances are available by entering the `oc get sharedsecrets` command and getting a non-empty list back.
