--- a/modules/ephemeral-storage-additional-support-limitations-for-shared-resource-csi-driver.adoc
+++ b/modules/ephemeral-storage-additional-support-limitations-for-shared-resource-csi-driver.adoc
@@ -4,6 +4,12 @@
 = Additional support limitations for the Shared Resource CSI Driver
 
 [role="_abstract"]
+
+[IMPORTANT]
+====
+The Shared Resource CSI Driver feature is now generally available in link:https://docs.redhat.com/en/documentation/builds_for_red_hat_openshift/1.1[builds for Red Hat OpenShift 1.1]. This feature is now deprecated in the OpenShift Container Platform. To use this feature, ensure you are using builds for Red Hat OpenShift 1.1 or a more recent version.
+====
+
 The Shared Resource CSI Driver has the following noteworthy limitations:
 
 * The driver is subject to the limitations of Container Storage Interface (CSI) inline ephemeral volumes.
