--- a/modules/installation-osp-local-disk-deployment.adoc
+++ b/modules/installation-osp-local-disk-deployment.adoc
@@ -8,10 +8,6 @@
 
 If you have an existing {rh-openstack} cloud, you can move etcd from that cloud to a dedicated ephemeral local disk.
 
-[WARNING]
-====
-This procedure is for testing etcd on a local disk only and should not be used on production clusters. In certain cases, complete loss of the control plane can occur. For more information, see "Overview of backup and restore operation" under "Backup and restore".
-====
 
 .Prerequisites
 
@@ -157,11 +153,6 @@ done
 
 . Create a file named `98-var-lib-etcd.yaml` by using the following YAML file:
 +
-[WARNING]
-====
-This procedure is for testing etcd on a local disk and should not be used on a production cluster. In certain cases, complete loss of the control plane can occur. For more information, see "Overview of backup and restore operation" under "Backup and restore".
-====
-+
 [%collapsible]
 ====
 [source,yaml]
@@ -238,6 +229,7 @@ spec:
 
           After=migrate-to-local-etcd.service
           Before=crio.service
+          Requisite=var-lib-etcd.mount
 
           [Service]
           Type=oneshot
@@ -260,6 +252,13 @@ spec:
 <6> Cleans up any previous migration state.
 <7> Copies and moves in separate steps to ensure atomic creation of a complete member directory.
 <8> Performs a quick check of the mount point directory before performing a full recursive relabel. If restorecon in the file path `/var/lib/etcd` cannot rename the directory, the recursive rename is not performed.
+====
++
+[WARNING]
+====
+After you apply the `98-var-lib-etcd.yaml` file to the system, do not remove it. Removing this file will break etcd members and lead to system instability.
+
+If a rollback is necessary, modify the `ControlPlaneMachineSet` object to use a flavor that does not include ephemeral disks. This change regenerates the control plane nodes without using ephemeral disks for the etcd partition, which avoids issues related to the `98-var-lib-etcd.yaml` file. It is safe to remove the `98-var-lib-etcd.yaml` file only after the update to the `ControlPlaneMachineSet` object is complete and no control plane nodes are using ephemeral disks.
 ====
 
 . Create the new `MachineConfig` object by running the following command:
