--- a/_unused_topics/configuring-additional-network.adoc
+++ b/_unused_topics/configuring-additional-network.adoc
@@ -10,7 +10,7 @@ As a cluster administrator, you can configure an additional network for your clu
 
 * xref:../../networking/multiple_networks/configuring-additional-network.adoc#nw-multus-bridge-object_configuring-additional-network[Bridge]
 * xref:../../networking/multiple_networks/configuring-additional-network.adoc#nw-multus-host-device-object_configuring-additional-network[Host device]
-* xref:../../networking/multiple_networks/configuring-additional-network.adoc#nw-multus-vlan-object_configuring-additional-network[VLAN]
+* xref:../../networking/multiple_networks/secondary_networks/creating-secondary-nwt-other-cni.adoc#nw-multus-vlan-object_configuring-additional-network[VLAN]
 * xref:../../networking/multiple_networks/configuring-additional-network.adoc#nw-multus-ipvlan-object_configuring-additional-network[IPVLAN]
 * xref:../../networking/multiple_networks/configuring-additional-network.adoc#nw-multus-macvlan-object_configuring-additional-network[MACVLAN]
 * xref:../../networking/multiple_networks/configuring-additional-network.adoc#nw-multus-tap-object_configuring-additional-network[TAP]
@@ -148,9 +148,9 @@ include::modules/nw-multus-tap-object.adoc[leveloffset=+2]
 [role="_additional-resources"]
 .Additional resources
 
-* For more information about enabling an SELinux boolean on a node, see xref:../../nodes/nodes/nodes-nodes-managing.adoc#nodes-nodes-working-setting-booleans_nodes-nodes-managing[Setting SELinux booleans]
+* For more information about enabling an SELinux boolean on a node, see xref:../nodes/nodes/nodes-nodes-managing.adoc#nodes-nodes-working-setting-booleans_nodes-nodes-managing[Setting SELinux booleans]
 
-// Set of includes pertains to OVN-Kubernetes additional network
+//// Set of includes pertains to OVN-Kubernetes additional network
 include::modules/configuring-ovnk-additional-networks.adoc[leveloffset=+2]
 include::modules/configuration-ovnk-network-plugin-json-object.adoc[leveloffset=+3]
 include::modules/configuration-ovnk-multi-network-policy.adoc[leveloffset=+3]
@@ -175,7 +175,7 @@ include::modules/configuring-localnet-switched-topology.adoc[tag=localnet-intro]
 include::modules/configuring-localnet-switched-topology.adoc[tag=localnet-content]
 include::modules/configuring-pods-secondary-network.adoc[leveloffset=+3]
 include::modules/configuring-pods-static-ip.adoc[leveloffset=+3]
-// end OVN-Kubernetes includes
+//// end OVN-Kubernetes includes
 
 include::modules/nw-multus-ipam-object.adoc[leveloffset=+1]
 
@@ -187,7 +187,7 @@ include::modules/nw-multus-configure-dualstack-ip-address.adoc[leveloffset=+2]
 
 [role="_additional-resources"]
 .Additional resources
-* xref:../../networking/multiple_networks/attaching-pod.html#nw-multus-add-pod_attaching-pod[Attaching a pod to an additional network]
+* xref:../../networking/multiple_networks/secondary_networks/attaching-pod.adoc#attaching-pod[Attaching a pod to an additional network]
 
 include::modules/nw-multus-create-network.adoc[leveloffset=+1]
 
